<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="80dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    tools:context=".MainActivity">

    <!-- 第一行的线性布局管理器 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/textView1"
            android:gravity="center"
            android:text="@string/textView1"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView2"
            android:gravity="center"
            android:text="@string/textView2"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView3"
            android:gravity="center"
            android:text="@string/textView3"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
    </LinearLayout>

    <!-- 第二行的线性布局管理器 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/textView4"
            android:gravity="center"
            android:text="@string/textView4"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView5"
            android:gravity="center"
            android:text="@string/textView5"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView6"
            android:gravity="center"
            android:text="@string/textView6"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
    </LinearLayout>

    <!-- 第三行的线性布局管理器 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/textView7"
            android:gravity="center"
            android:text="@string/textView7"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView8"
            android:gravity="center"
            android:text="@string/textView8"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@color/textView9"
            android:gravity="center"
            android:text="@string/textView9"
            android:textColor="@color/wordcolor"
            android:textSize="@dimen/wordsize"
            />
    </LinearLayout>
</LinearLayout>
